feat: Refatorando métodos para utilizar .collect(Collectors.toList());