@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class FormaPagamentoMapper {
@@ -22,7 +23,7 @@ public class FormaPagamentoMapper {
     public List<FormaPagamentoDto> toCollectionDto(List<FormaPagamento> formaPagamentos) {
         return formaPagamentos.stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public FormaPagamento toDomainObject(FormaPagamentoInput formaPagamentoInput) {
