@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class GrupoMapper {
@@ -22,7 +23,7 @@ public class GrupoMapper {
     public List<GrupoDto> toCollectionDto(List<Grupo> grupos) {
         return grupos.stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Grupo toDomainObject(GrupoInput grupoInput) {
